fdo#47036 fix RTF import of shapes inside text frames at the start of the doc